added viewport and description. Also added  header and main element.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="../Accessibility-Quiz/style.css">
+        <link rel="stylesheet" href="../Accessibility-Quiz/style.css"/>
+        <meta name="viewport" content="width=device-wdith, inital-scale=1"/>
+        <meta name="description" content="Accessibility Quiz"/>
+        <title>Accessibility Quiz</title>
     </head>
     <body>
-
+        <header>
+            <img src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" id="logo" alt="quiz logo">
+            <h1>HTML/CSS Quiz</h1>
+        </header>
+        <main></main>
     </body>
 </html>
