--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
         <header>
             <img src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" id="logo" alt="quiz logo">
             <h1>HTML/CSS Quiz</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a>INFO</a>
+                    </li>
+                    <li>
+                        <a>HTML</a>
+                    </li>
+                    <li>
+                        <a>CSS</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
         <main></main>
     </body>
