added section and form element

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
                 </ul>
             </nav>
         </header>
-        <main></main>
+        <main>
+            <form action="https://freecodecamp.org/practice-project/accessibility-quiz" method="post">
+                <section></section>
+                <section></section>
+                <section></section>
+                <input type="submit">
+            </form>
+        </main>
     </body>
 </html>
