--- a/index.html
+++ b/index.html
@@ -15,22 +15,28 @@
             <nav>
                 <ul>
                     <li>
-                        <a>INFO</a>
+                        <a href="#student-info">INFO</a>
                     </li>
                     <li>
-                        <a>HTML</a>
+                        <a href="#html-questions">HTML</a>
                     </li>
                     <li>
-                        <a>CSS</a>
+                        <a href="css-questions">CSS</a>
                     </li>
                 </ul>
             </nav>
         </header>
         <main>
             <form action="https://freecodecamp.org/practice-project/accessibility-quiz" method="post">
-                <section></section>
-                <section></section>
-                <section></section>
+                <section role="region" aria-labelledby="student-info">
+                    <h2 id="student-info">Student Info</h2>
+                </section>
+                <section role="region" aria-labelledby="html-questions">
+                    <h2 id="html-questions">HTML Questions</h2>
+                </section>
+                <section role="region" aria-labelledby="css-questions">
+                    <h2 id="css-questions">CSS Questions</h2>
+                </section>
                 <input type="submit">
             </form>
         </main>
