--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
             <form action="https://freecodecamp.org/practice-project/accessibility-quiz" method="post">
                 <section role="region" aria-labelledby="student-info">
                     <h2 id="student-info">Student Info</h2>
+                    <div class="info">
+                        <label for="name">
+                               Name:  
+                        </label>
+                        <input id="name">
+                    </div>
+                    <div class="info">
+                        <label for="email">
+                               Email: 
+                        </label>
+                        <input  id="email" >
+                    </div>
+                    <div class="info">
+                        <label>
+                            Address
+                        </label>
+                        <input  id="address">
+                    </div>
                 </section>
                 <section role="region" aria-labelledby="html-questions">
                     <h2 id="html-questions">HTML Questions</h2>
