added input type and placeholders

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
                         <label for="name">
                                Name:  
                         </label>
-                        <input id="name">
+                        <input id="name" type="text" name="name" placeholder="John Doe">
                     </div>
                     <div class="info">
                         <label for="email">
                                Email: 
                         </label>
-                        <input  id="email" >
+                        <input  id="email" type="email" name="email" placeholder="johndoe@gmail.com" >
                     </div>
                     <div class="info">
-                        <label>
-                            Address
+                        <label for="birth-date">
+                            Date of Birth:
                         </label>
-                        <input  id="address">
+                        <input  id="birth-date" type="date" name="birth-date">
                     </div>
                 </section>
                 <section role="region" aria-labelledby="html-questions">
