added question block div and .sr-only to both html and css

--- a/index.html
+++ b/index.html
@@ -34,23 +34,32 @@
                         <label for="name">
                                Name:  
                         </label>
-                        <input id="name" type="text" name="name" placeholder="John Doe">
+                        <input id="name" type="text" name="name">
                     </div>
                     <div class="info">
                         <label for="email">
                                Email: 
                         </label>
-                        <input  id="email" type="email" name="email" placeholder="johndoe@gmail.com" >
+                        <input  id="email" type="email" name="email" >
                     </div>
                     <div class="info">
                         <label for="birth-date">
-                            Date of Birth:
+                            D.O.B:
+                            <span class="sr-only">(Date of birth)</span>
                         </label>
                         <input  id="birth-date" type="date" name="birth-date">
                     </div>
                 </section>
                 <section role="region" aria-labelledby="html-questions">
                     <h2 id="html-questions">HTML Questions</h2>
+                    <div class="question-block">
+                        <p>1</p>
+                        <fieldset class="question"></fieldset>
+                    </div>
+                    <div class="question-block">
+                        <p>2</p>
+                        <fieldset class="question"></fieldset>
+                    </div>
                 </section>
                 <section role="region" aria-labelledby="css-questions">
                     <h2 id="css-questions">CSS Questions</h2>
