--- a/index.html
+++ b/index.html
@@ -54,11 +54,23 @@
                     <h2 id="html-questions">HTML Questions</h2>
                     <div class="question-block">
                         <p>1</p>
-                        <fieldset class="question"></fieldset>
+                        <fieldset class="question" name="html-question-one">
+                            <legend></legend>
+                            <ul class="answers-list">
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </fieldset>
                     </div>
                     <div class="question-block">
                         <p>2</p>
-                        <fieldset class="question"></fieldset>
+                        <fieldset class="question" name="html-question-two">
+                            <legend></legend>
+                            <ul class="answers-list">
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </fieldset>
                     </div>
                 </section>
                 <section role="region" aria-labelledby="css-questions">
