nest inputs inside ul

--- a/index.html
+++ b/index.html
@@ -55,20 +55,36 @@
                     <div class="question-block">
                         <p>1</p>
                         <fieldset class="question" name="html-question-one">
-                            <legend></legend>
+                            <legend>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac vestibulum mi. Nullam a dui in tortor elementum porttitor in vel risus.</legend>
                             <ul class="answers-list">
-                                <li></li>
-                                <li></li>
+                                <li>
+                                    <label>
+                                        <input type="radio" name="q1-a1" value="true">True                            
+                                    </label>
+                                </li>
+                                <li>
+                                    <label>
+                                        <input type="radio" name="q1-a2" value="false">False                            
+                                    </label>
+                                </li>
                             </ul>
                         </fieldset>
                     </div>
                     <div class="question-block">
                         <p>2</p>
                         <fieldset class="question" name="html-question-two">
-                            <legend></legend>
+                            <legend>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi vestibulum diam ac sem laoreet, at ornare augue feugiat.</legend>
                             <ul class="answers-list">
-                                <li></li>
-                                <li></li>
+                                <li>
+                                    <label>
+                                        <input type="radio" name="q2-a1" value="true">True                            
+                                    </label>
+                                </li>
+                                <li>
+                                    <label>
+                                        <input type="radio" name="q2-a2" value="false">False                             
+                                    </label>
+                                </li>
                             </ul>
                         </fieldset>
                     </div>
