add name to radio; target p::before in css to add content

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                             <legend>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac vestibulum mi. Nullam a dui in tortor elementum porttitor in vel risus.</legend>
                             <ul class="answers-list">
                                 <li>
-                                    <label>
-                                        <input type="radio" name="q1-a1" value="true">True                            
+                                    <label for="q1-a1">
+                                        <input type="radio" id="q1-a1" name="q1" value="true">True                            
                                     </label>
                                 </li>
                                 <li>
-                                    <label>
-                                        <input type="radio" name="q1-a2" value="false">False                            
+                                    <label for="q1-a2">
+                                        <input type="radio" id="q1-a2" name="q1" value="false">False                            
                                     </label>
                                 </li>
                             </ul>
@@ -76,13 +76,13 @@
                             <legend>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi vestibulum diam ac sem laoreet, at ornare augue feugiat.</legend>
                             <ul class="answers-list">
                                 <li>
-                                    <label>
-                                        <input type="radio" name="q2-a1" value="true">True                            
+                                    <label for="q2-a1">
+                                        <input type="radio" id="q2-a1" name="q2" value="true">True                            
                                     </label>
                                 </li>
                                 <li>
-                                    <label>
-                                        <input type="radio" name="q2-a2" value="false">False                             
+                                    <label for="q2-a2">
+                                        <input type="radio" id="q2-a2" name="q2" value="false">False                             
                                     </label>
                                 </li>
                             </ul>
