--- a/index.html
+++ b/index.html
@@ -91,6 +91,24 @@
                 </section>
                 <section role="region" aria-labelledby="css-questions">
                     <h2 id="css-questions">CSS Questions</h2>
+                    <div class="formrow">
+                        <div class="question-block">
+                            <label for="customer">Are you a frontend developer?</label>
+                        </div>
+                        <div class="answer">
+                            <select name="customer" id="customer" required>
+                                <option value="">Select an option</option>
+                                <option value="yes">Yes</option>
+                                <option value="no">No</option>
+                            </select>
+                        </div>
+                        <div class="question-block">
+                            <label>Do you have any questions?</label>
+                        </div>
+                        <div class="answer">
+                            
+                        </div>
+                    </div>
                 </section>
                 <input type="submit">
             </form>
