--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                             </select>
                         </div>
                         <div class="question-block">
-                            <label>Do you have any questions?</label>
+                            <label for="css-questions">Do you have any questions?</label>
                         </div>
                         <div class="answer">
-                            
+                            <textarea placeholder="Enter text here..." cols="24" rows="5" id="css-questions"></textarea>
                         </div>
                     </div>
                 </section>
