--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                 </section>
-                <input type="submit">
+                <button type="submit">Send</button>  
             </form>
         </main>
     </body>
