--- a/index.html
+++ b/index.html
@@ -113,5 +113,12 @@
                 <button type="submit">Send</button>  
             </form>
         </main>
+        <footer>
+            <address>
+                Santa Rosa<br/>
+                Laguna<br/>
+                Philippines<br/>
+            </address>
+        </footer>
     </body>
 </html>
